
The `$&fork` primitive adjusts $SHLVL.

Added a `$&build` primitive to report builder info (user, host, date, compiler).

Provided an XS language-definition file for GNU source-highlight. See the
comments at the top of `xs.lang` for installation instructions.

Exposed the command-line options `-?` to show usage information and `-G` to
run XS with the garbage collector disabled.

xs 1.1 to xs 1.2
----------------

The `echo` builtin handles combined `-n` and `--` options.

Stripped out a lot of unused code (~10% by weight).

Unicode escapes are now delimited, like \u'n...'. The fixed-length forms
\unnnn and \Unnnnnnnn are deprecated, but will remain available through
all of the xs 1.x releases.

Rewrote the man page.

Reworked `pushd`, `popd` and `dirs` commands. The `pushd` command is no
longer broken by paths which contain spaces. The directory list is now
laid out vertically.

Reworked locale initialization to ensure that `$&wid` works as designed.

Accept printf format modifier '.

Extended the `limit` command to expose all Linux (2.6+) -specific settings.

Throwing from a catch (this includes other syntax which exercises catch
and throw, e.g. escape) no longer leaves signal handling blocked.

Upward funargs *do* work. Documented with sample code.

The popd builtin returns true.

Reworked `%interactive-loop` to show the "type" of error caught; this
normally denotes the signalling function. Also brought many internal
messages into alignment with this protocol.

Added `%before-interactive-prompt` hook, called (if defined) from the
interactive loop after `%prompt` but before printing the initial prompt.
xs passes the prior command's result code to `%before-interactive-prompt`. 

Support `**` (exponentiation) arithmetic operator.

Set build options to use LTO and to strip binary on install.

Fix mis-marking of a control character in a prompt. The symptom of this
failure was corruption of the readline display during editing and recall