@@ -64,7 +64,7 @@ static void runxsrc(int xsin) {
 static void usage(void) NORETURN;
 static void usage(void) {
 	eprint(
-"usage: xs [-c command] [-silevxnpo?G] [file [args ...]]\n"
+"usage: xs [-c command] [-silevxnpo?GZ] [file [args ...]]\n"
 "	-?	show usage information\n"
 "	-c cmd	execute argument\n"
 "	-s	read commands from standard input; stop option parsing\n"
@@ -78,6 +78,7 @@ static void usage(void) {
 "	-o	don't open stdin, stdout, and stderr if they were closed\n"
 "	-d	don't ignore SIGQUIT or SIGTERM\n"
 "	-G	run without garbage collection\n"
+"	-Z	don't load ~/.xsrc and ~/.xsin\n"
 	);
 	exit(1);
 }
@@ -121,8 +122,9 @@ int main(int argc, char **argv) {
 
 	volatile int runflags = 0;		/* -[einvxL] */
 	volatile bool isprotected = false;	/* -p */
+	volatile bool norc = false;		/* -Z */
 	volatile bool allowquit = false;	/* -d */
-	volatile bool cmd_stdin = false;		/* -s */
+	volatile bool cmd_stdin = false;	/* -s */
 	/* loginshell: see above */		/* -l or $0[0] == '-' */
 	bool keepclosed = false;		/* -o */
 	const char *volatile cmd = NULL;	/* -c */
@@ -138,7 +140,7 @@ int main(int argc, char **argv) {
 	if (argv[0][0] == '-')
 		loginshell = true;
 
-	while ((c = getopt(argc, argv, "eilxvnpodsc:?G")) != EOF)
+	while ((c = getopt(argc, argv, "eilxvnpodsc:?GZ")) != EOF)
 		switch (c) {
 #define FLAG(x, action) case x: action; break; 
 		FLAG('c', cmd = optarg);
@@ -153,6 +155,7 @@ int main(int argc, char **argv) {
 		FLAG('d', allowquit = true);
 		FLAG('s', cmd_stdin = true; goto getopt_done);
 		FLAG('G', GC_disable());
+		FLAG('Z', norc = true);
 		FLAG('?', usage());
 		default:
 			usage();
@@ -196,12 +199,14 @@ getopt_done:
 		hidevariables();
 		initenv(environ, isprotected);
 
-		if (loginshell)
-			runxsrc(0);
+		if (!norc) {
+			if (loginshell)
+				runxsrc(0);
 
-		if (runflags & run_interactive) {
-			inithistory();
-			runxsrc(1);
+			if (runflags & run_interactive) {
+				inithistory();
+				runxsrc(1);
+			}
 		}
 
 		if (cmd == NULL && !cmd_stdin && optind < ac) {
