@@ -45,6 +45,8 @@ comments at the top of `xs.lang` for installation instructions.
 Exposed the command-line options `-?` to show usage information and `-G` to
 run XS with the garbage collector disabled.
 
+Added the command-line option `-Z` to suppress loading of ~/.xsrc and ~/.xsin.
+
 xs 1.1 to xs 1.2
 ----------------
 
